--- a/checker/templates/index.html
+++ b/checker/templates/index.html
@@ -1,112 +1,103 @@
-{% extends "layout.html" %}
+<html>
 
-{% block title %}Таблица результатов{% endblock %}
-{% block body %}
-<link rel="stylesheet" href="teams.css">
-<div class="container">
-  <h2>InnoCTF 2017 - trainings</h2>
-    <h3>Сейчас идет {{ round }} раунд</h3>
-  <p>
-  <form class="" action="/reg" method="post">
-    <input type="text" name="username" value="Nickname" minlength=2 maxlength=40 required />
-    <input type="submit" name="submit" value="Register">
-  </form></p>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <td align="center"><b>User</b></td>
-        <td align="center"><b>Score</b></td>
-      </tr>
-    </thead>
-    <tbody>
-    	{% for user in users %}
-    	<tr>
-        <td>{{ user[1] }}</td>
-        <td>{{ user[4] }}</td>
-      </tr>
-    	{% endfor %}
-    </tbody>
-  </table>
-</div>
-<style type="text/css">
-    .team {
-        position: relative;
-        color: #000;
-        width: 250px;
-    }
-    td {
-        overflow: hidden;
-    }
-    .back_img {
-        opacity: 0.4;
-        z-index: -1;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: no-repeat center;
-        width: 100%;
-        position: absolute;
-    }
-    .place {
-        float: left;
-        width: 20%;
-        height: 100%;
-        font-size: 20pt;
-        display: table;
-    }
-        .place span {
-            vertical-align:middle;
-            display: table-cell;
-        }
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+</head>
 
-    .inform {
-        float: left;
-        height: 100%;
-        width: 80%;
-    }
-    .team_name {
-        float: left;
-        font-size: 16pt;
-        width: 100%;
-	height: 30px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	word-break: break-all;
-    }
+<body>
+    <div class="container">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        {% if registered %}
+                        <li><a>{{ token }}</a></li>
+                        <li><a id="logout">Logout</a></li>
+                        {% else %}
+                        <li><a href="#Register" data-toggle="modal" data-target=".modal-register">Register</a> </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 
-    .service {
-        width: 220px;
-    }
+    <div class="container" style="margin-top:50px">
+        <h1>Scoreboard</h1>
+        <table class="table table-striped">
+            {% if participants %} {% for name, score, regdate in participants %}
+            <tr>
+                <td>{{ loop.index0 +1 }}</td>
+                <td class=".text-center">{{ name }}</td>
+                <td class=".text-center">{{ score }}</td>
+                <td class=".text-center">{{ regdate }}</td>
+            </tr>
+            {% endfor %} {% else %}
+            <tr>
+                <td class=".text-center">
+                    Nobody registered yet ¯\_(ツ)_/¯
+                </td>
+            </tr>
+            {% endif %}
+        </table>
+    </div>
 
-    .uptime {
-        width: 100%;
-        height: 30px;
-        font-size: 20pt;
-    }
-    .attack_defense {
-        float: left;
-        width: 100%;
-        margin-top: 20px;
-        font-size: 12pt;
-        font-weight: bold;
-    }
-    .attack_defense .block {
-        width: 50%;
-        float: left;
-    }
-    .success {
-        background-color: #4CAF50 !important;
-    }
-    .danger {
-        background-color: #F44336 !important;
-        color: #fff;
-    }
-    .info {
-        background-color: #2196F3 !important;
-    }
-    .warning {
-        background-color: #F4CE43 !important;
-    }
-</style>
-{% endblock %}
+    <div class="modal fade modal-register" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Register new user</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="reg-form">
+                        <div class="form-group">
+                            <label for="name">Username</label>
+                            <input type="text" class="form-control" id="name" placeholder="mamkin_kaker">
+                        </div>
+                        <button type="submit" id="reg_click" class="btn btn-default">Register</button>
+                    </form>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
+    <script src="cookie.js"></script>
+    <script>
+        $('#modal-register').on('show.bs.modal', function(e) {
+            $("#name").focus();
+        });
+
+        $("#reg-form").submit(function(e) {
+            e.preventDefault();
+            var name = $("#name").val();
+            $.post("register", {
+                name: btoa(name)
+            }, function(data) {
+                Cookies.set('token', data, {
+                    expires: 6
+                });
+                $('#modal-register').hide();
+                location.reload();
+            });
+        })
+
+        $("#logout").click(function() {
+            Cookies.remove('token');
+            location.reload();
+        })
+    </script>
+</body>
+
+</html>
